<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Time Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Clock">DigitalClock</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiply">Multiply</string>
    <string name="divide">Divide</string>
    <string name="std_time">00:00:00</string>

</resources>
 